--- a/Windows/Powershell/windows-terminal-settings.json
+++ b/Windows/Powershell/windows-terminal-settings.json
@@ -29,7 +29,7 @@
         }
     ],
     "copyFormatting": "none",
-    "copyOnSelect": true,
+    "copyOnSelect": false,
     "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
     "initialCols": 150,
     "initialRows": 35,
@@ -43,12 +43,14 @@
                 "fontFace": "MesloLGM NF",
                 "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
                 "hidden": false,
+                "bellStyle": "none",
                 "name": "Windows PowerShell"
             },
             {
                 "commandline": "cmd.exe",
                 "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
                 "hidden": false,
+                "bellStyle": "none",
                 "name": "Command Prompt"
             },
             {
@@ -57,12 +59,14 @@
                 "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
                 "hidden": false,
                 "name": "PowerShell 7",
+                "bellStyle": "none",
                 "source": "Windows.Terminal.PowershellCore"
             },
             {
                 "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
                 "hidden": false,
                 "name": "Azure Cloud Shell",
+                "bellStyle": "none",
                 "source": "Windows.Terminal.Azure"
             }
         ]
